log/build_2025-09-27_07-06-38/xline_path_planner/stderr.log
CMake Deprecation Warning at /opt/ros/humble/share/rosidl_cmake/cmake/rosidl_target_interfaces.cmake:32 (message):
  Use rosidl_get_typesupport_target() and target_link_libraries() instead of
  rosidl_target_interfaces()
Call Stack (most recent call first):
  CMakeLists.txt:62 (rosidl_target_interfaces)


/root/xline_path_planner/xline_path_planner/src/main.cpp: In member function ‘void PlannerNode::plan_trajectory()’:
/root/xline_path_planner/xline_path_planner/src/main.cpp:383:10: error: ‘parse_cad_file’ was not declared in this scope; did you mean ‘rcl_parse_yaml_file’?
  383 |     if (!parse_cad_file(cad_parser, cad_data))
      |          ^~~~~~~~~~~~~~
      |          rcl_parse_yaml_file
/root/xline_path_planner/xline_path_planner/src/main.cpp:379:21: warning: unused variable ‘output_formatter’ [-Wunused-variable]
  379 |     OutputFormatter output_formatter;
      |                     ^~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/planner_node.dir/build.make:76: CMakeFiles/planner_node.dir/src/main.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:184: CMakeFiles/planner_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
